# Sudomimus

./: .gitignore  .gitmodules  CODEBASE_AUDIT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/workflows/: ci-python.yml  ci-specs.yml  ci-typescript.yml
docs/: README.md  csharp-nuget-publish.md
docs/proposals/: native-errand-claims-sdk-upgrade.md
examples/csharp/console/: Program.cs  README.md  Sudomimus.Examples.Console.csproj
examples/csharp/godot/: .gitignore  Game.csproj  LoginNode.cs  LoginScene.tscn  README.md  project.godot
examples/python/: README.md  login_example.py  pyproject.toml
examples/typescript/node/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
examples/typescript/node/src/: index.ts
examples/typescript/react/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
examples/typescript/react/src/: App.tsx  browser-signer.ts
sdks/csharp/: .gitignore  Directory.Build.props  Sudomimus.slnx
sdks/csharp/src/Sudomimus.Connect/: ClientJwtSigner.cs  ConnectApiException.cs  ConnectClient.cs  ConnectClientAuth.cs  ConnectClientOptions.cs  ConnectConfigException.cs  ConnectConstants.cs  ConnectErrorBody.cs  README.md  RotatingConnectClient.cs  Sudomimus.Connect.csproj  TokenStore.cs
sdks/csharp/src/Sudomimus.Native/: ClaimGrantState.cs  README.md  (+25 more)
sdks/go/: README.md  go.mod
sdks/go/token/: codec.go  contract_test.go  errors.go  idtoken.go  idtoken_test.go  parser.go  token_test.go  types.go  verifier.go
sdks/java/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
sdks/java/token/: README.md  build.gradle.kts
sdks/python/: README.md  pyproject.toml  tasks.py
sdks/typescript/: README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
specs/: README.md  connect.yaml  native.yaml
(+82 files in other folders)
